# dbcenter_server

./: .gitignore  CMakeLists.txt  README.md  main.py  requirements.txt
BI/: eslint.config.mjs  package-lock.json  package.json
BI/src/app/: layout.tsx
BI/src/lib/: db.ts
api_server/: main.py
connect/: connect.hpp  mysql.hpp  oracle.hpp  postgresql.hpp  sqlserver.hpp
doc/: 技术与业务细节.md  本程序的部署与开发步骤详解.md  项目未来发展与想法.md  项目结构与依赖.md
general/: data.hpp
logger/: logger.hpp
process/: CMakeLists.txt  main.cpp
process/connect/: mongo.cpp  mongo.hpp  mysql.hpp  odbc.cpp  odbc.hpp  redis.hpp  socket.cpp  socket.hpp
process/logger/: logger.cpp  logger.hpp
process/scheduler/: dag.cpp  dag.hpp  thread_pool.cpp  thread_pool.hpp
process/tasks/: base.cpp  base.hpp  design_cost.cpp  node.cpp  node.hpp  person.cpp  process_error.hpp  visitor.cpp  worktime.cpp
process/tasks/ameliorate/: ameliorate.cpp  ameliorate.hpp
process/tasks/business_connection/: increment.cpp  increment.hpp  join.cpp  join.hpp  process.cpp  process.hpp  sync.cpp
process/tasks/business_connection/process/: transformation_of_design_changes.cpp
process/tasks/message/: format.cpp  format.hpp  sum.cpp  sum.hpp
process/tasks/person/: person.cpp  person.hpp
process/tasks/process/: ameliorate.hpp  business_connection.hpp  delivery.hpp  error.hpp  person.hpp  project.hpp  travel.hpp  visitor.cpp  visitor.hpp  worktime.hpp
process/tasks/visitor/: main.cpp  visitor.cpp  visitor.hpp
process/tests/: temp_socket_env.py  test_dag.cpp  test_data.cpp  test_json.cpp  test_logger.cpp  test_mongo_connect.cpp  test_mysql_connect.cpp  test_nanodbc.cpp  test_odbc.cpp  test_socket.cpp  test_table.cpp  test_thread_pool.cpp
process/utils/: base.hpp  big_int.hpp  data.cpp  data.hpp  general.cpp  general.hpp  json.cpp  json.hpp  logger.cpp  logger.hpp  mongo.cpp  mongo.hpp  parser_pool.cpp  parser_pool.hpp  pipeline.cpp  pipeline.hpp  queue.hpp  sql_builder.cpp  sql_builder.hpp  table.hpp  wrapper.hpp
process_manage/: watch_dog.hpp
scheduler/: dag.hpp  general.py  main.py  node.hpp  thread_pool.hpp
scheduler/general/: config.py  connect.py  context.py  logger.py  message_queue.py
script_tools/: start_sync.ps1  start_web.ps1
source/: requirements.txt
source/config/: connect.toml  dag.json  etl.json  process_scheduler.toml  sync_context.json  sync_scheduler.toml  task.json  tasks.json  tasks_example.json  tasks_process_test.json  tasks_temp.json  tasks_temp2.json  tasks_temp3.json
source/script/: start.ps1
source/script_tools/: pack_conda_env.ps1  start.ps1  start_process.ps1  start_sync.ps1  start_web.ps1
source/select/ameliorate/increment/: ameliorate.sql
source/select/business_connection/sync_template/: business_connection.sql  business_connection_close.sql  business_connection_copy_delivery_unit.sql  business_connection_main_delivery_unit.sql  design_change.sql  design_change_entry.sql  design_change_execution_copy_delivery_unit.sql  design_change_execution_document_change_unit.sql  design_change_execution_main_delivery_unit.sql  design_change_execution_material_preparation_technology_unit.sql  design_change_execution_reworked_material_unit.sql  shop_execution_copy_delivery_unit.sql  shop_execution_main_delivery_unit.sql  shop_execution_reworked_material_unit.sql  shop_execution_task_item_point_unit.sql  shop_exeecution_material_preparation_technology_unit_class.sql  shop_exeecution_material_preparation_technology_unit_process.sql  technological_process_change.sql
source/select/short_message/increment/: short_message.sql
source/select/short_message/sync_template/: short_message.sql
source/select/short_message/temp/: short_message.sql
source/select/tangyu/increment/: alignment_file.sql
source/sql/: Industry_association.sql  Industry_association_closure_statistics.sql  abnormal_type.sql  ameliorate.sql  kq_time.sql  worktime.sql
source/sql/business_connection/: business_connection_copy_delivery_unit.sql  design_change.sql  technological_process.sql
source/sql/business_connection/increment/: business_connection.sql  class_group.sql  design_change_execution.sql  shop_execution.sql  (+1 more)
source/sql/dengfang/: CT_BCP_PROSTDTIMEENTRY.sql  CT_BCP_PROSTDTIMEOPENTRYS.sql  T_MM_project.sql  T_PRO_ProjectJCH.sql  dwd_df_work_time.sql  tk_crrc_dispatch.sql  tk_crrc_gxrwxf.sql  tk_crrc_metro_bzrydy_fl.sql  tk_crrc_metro_groupclass.sql
source/sql/old_etl/: abnormal.sql  ameliorate.sql  debug_tasks.sql  delivery_train_new.sql  exception_type.sql  mes_staff.sql  project_basic.sql  shr_staff.sql  supervise.sql  travel_filter.sql  working_hours.sql  yearly_plan.sql  人员工时新_从eas查询.sql  计划看板日计划_从mes查询.sql  调试任务_从mes查询.sql
source/sql/old_etl2/: abnormal.sql  debug_tasks.sql  kq_type.sql  travel_fillter.sql  worktime_temporary.sql
source/sql/tangyu/: alignment_file.sql  ods_alignment_file.sql
source/table/: ods_alignment_file.xlsx
source/test/: test.json
sync/: callback_func.py  main.py  scheduler.py  scheduler_old.py  test_socket.py
sync/general/: __init__.py  base.py  commont.py  config.py  connect.py  executer.py  logger.py  node.py  pipeline.py  socket.py
sync/node/: api.py  base.py  file.py  mongo.py  sql.py
sync/node/old/: ameliorate.py  attendance_clean.py  delivery.py  design_change.py  error.py  human_efficiency.py  industry_association.py  project_clean.py  shr_clean.py  travel.py
tests/: sqlserver_connect_test.cpp  test_data.cpp  test_json.cpp
utils/: base.hpp  data.hpp  high_float.hpp  json.cpp  json.hpp  queue.hpp  table.cpp  table.hpp
watch_dog/: watch_dog.hpp
web/: README.md  connect.py  general.py  home.py  nuxt.config.ts  package-lock.json  package.json
web/components/: SelectBI.vue
web/front/: README.md  package-lock.json  package.json
web/pages/: index.vue  test.vue  人员效能数据接口.py  差旅数据接口.py  异常数据接口.py  改善提案数据接口.py  线表检查.py  线表生成.py  项目可视化与统计.py
web/src/: App.vue
web/src/components/: HelloWorld.vue  SankeyDiagram.vue  Test.vue  TheWelcome.vue
web/src/router/: index.js
web/src/views/: DesignChange.vue  Home.vue  TestView.vue  Travel.vue
(+48 files in other folders)
